duck/test/fail/contravariant_spec.duck.XXX
import base

main = exit 0

_ = (+) :: a -> Int -> Int
